crates/check_service/src/snapshots/check_service__workspace__tests__debug_registered_types.snap
---
source: crates/check_service/src/workspace.tests.rs
expression: result.unwrap()
---
TypeId(0) => instanceof unresolved reference "Person" (scope ID: 0)
