crates/check_service/src/snapshots/check_service__workspace__tests__debug_type_info.snap
---
source: crates/check_service/src/workspace.tests.rs
expression: result.unwrap()
---
sync Function "foo" {
  accepts: {
    params: [
      required name: string
      required age: number
    ]
    type_args: []
  }
  returns: Global TypeId(0)
}
class "Person" {
  extends: none
  implements: []
  type_args: []
}
