crates/check_service/src/snapshots/check_service__workspace__tests__plugins_can_use_custom_severity.snap
---
source: crates/check_service/src/workspace.tests.rs
expression: result.diagnostics
---
[
    Diagnostic {
        category: Some(
            Category {
                name: "plugin",
                link: None,
            },
        ),
        severity: Warning,
        description: "Don't set explicit colors. Use `.color-*` classes instead.",
        message: "Don't set explicit colors. Use `.color-*` classes instead.",
        advices: Advices {
            advices: [],
        },
        verbose_advices: Advices {
            advices: [],
        },
        location: Location {
            path: Some(
                File(
                    "/project/a.css",
                ),
            ),
            span: Some(
                4..14,
            ),
            source_code: None,
        },
        tags: DiagnosticTags(
            BitFlags<DiagnosticTag> {
                bits: 0b0,
            },
        ),
        source: None,
    },
]
